Fix Docker harness: full surefire providers, Java-8 agent, paimon excludes
- Dockerfile: build the FULL surefire fork reactor (was -pl common,plugin)
  so all providers (junit-platform/junit4/47/testng) install to ~/.m2.
  Without them every project fails to even start Surefire (missing
  surefire-junit-platform:3.0.0-M8-SNAPSHOT), the root cause of paimon's
  "N of N produced no report" red-baseline abort.
- csto2 agent: compile agent/** + util/Json at release 8 (bytecode 52) via a
  separate compiler execution, so the -javaagent loads in a Java 8 project's
  Surefire fork (e.g. paimon). Replaces the one Java-11 API (isBlank).
  Fixes UnsupportedClassVersionError (fork exit 134). Main jar stays 11.
- entrypoint: run the reflection-only discover helper under csto2's own JVM,
  not the project's pinned JDK (which may be < Java 11 and can't load it).
- 3613 (paimon): exclude 3 infra-dependent tests that error in a Docker-less
  container (Iceberg* need Parquet/Avro on the classpath; PostgresqlCatalogTest
  needs a Docker daemon for Testcontainers).
- run.sh: ubuntu-latest-spec runner (4 CPU / 16g) that detaches, captures
  logs despite --rm, pins the discover JVM, and makes a fresh results dir.
- findings: green-gating vs the prior work's failure-tolerant measurement.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>